basic configuration, css grid, basic js and layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello
+---
+layout: base
+title: plain d.
+---
+<div class='row'>
+  <div class='twelvecol last'>
+    <p>
+      plain d.
+    </p>
+  </div>
+</div>
