--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@ title: plain d.
 ---
 <div class='row'>
   <div class='twelvecol last'>
-    <p>
+    <p class='logo_text'>
       plain d.
     </p>
+    <p class='motto'>
+      web design & development
+    </p>
+    <nav>
+      <ul>
+        <li>
+          <a href='https://twitter.com/#!/dawidwu' target='_blank'>twitter</a>
+        </li>
+        <li>
+          <a href='https://dawidw.pl' target='_blank'>blog</a>
+        </li>
+        <li>
+          <a href='mailto:dawid@plaind.pl' target='_blank'>mail</a>
+        </li>
+      </ul>
+    </nav>
   </div>
 </div>
