logo made with css!

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@ title: plain d.
 ---
 <div class='row'>
   <div class='twelvecol last'>
+    <div class='logo_container'>
+      <div class='logo'>
+        <div class='outer'>
+          <div class='inner'>
+            <span class='tilda'>
+              ~
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
     <p class='logo_text'>
       plain d.
     </p>
