--- a/index.html
+++ b/index.html
@@ -2,37 +2,39 @@
 layout: base
 title: plain d.
 ---
-<div class='row'>
-  <div class='twelvecol last'>
-    <div class='logo_container'>
-      <div class='logo'>
-        <div class='outer'>
-          <div class='inner'>
-            <span class='tilda'>
-              ~
-            </span>
+<section class='container' id='intro'>
+  <div class='row'>
+    <div class='twelvecol last'>
+      <div class='logo_container'>
+        <div class='logo'>
+          <div class='outer'>
+            <div class='inner'>
+              <span class='tilda'>
+                ~
+              </span>
+            </div>
           </div>
         </div>
       </div>
+      <p class='logo_text'>
+        plain d.
+      </p>
+      <p class='motto'>
+        web design & development
+      </p>
+      <nav>
+        <ul>
+          <li>
+            <a href='https://twitter.com/#!/dawidwu' target='_blank'>twitter</a>
+          </li>
+          <li>
+            <a href='https://dawidw.pl' target='_blank'>blog</a>
+          </li>
+          <li>
+            <a href='mailto:dawid@plaind.pl' target='_blank'>mail</a>
+          </li>
+        </ul>
+      </nav>
     </div>
-    <p class='logo_text'>
-      plain d.
-    </p>
-    <p class='motto'>
-      web design & development
-    </p>
-    <nav>
-      <ul>
-        <li>
-          <a href='https://twitter.com/#!/dawidwu' target='_blank'>twitter</a>
-        </li>
-        <li>
-          <a href='https://dawidw.pl' target='_blank'>blog</a>
-        </li>
-        <li>
-          <a href='mailto:dawid@plaind.pl' target='_blank'>mail</a>
-        </li>
-      </ul>
-    </nav>
   </div>
-</div>
+</section>
