--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: base
 title: plain d.
 ---
-<section class='container' id='intro'>
+<section class='container' data-speed='2000' id='intro'>
   <div class='row'>
     <div class='twelvecol last'>
       <div class='logo_container'>
@@ -38,3 +38,5 @@ title: plain d.
     </div>
   </div>
 </section>
+<!-- %section.container#work{data: {speed: 12}} -->
+<!-- %section.container#about{data: {speed: 22}} -->
